httpd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd
spec:
  replicas: 4
  selector:
    matchLabels:
      app: httpd
  template:
    metadata:
      labels:
        app: httpd
    spec:
      containers:
      - name: httpd
        image: httpd:2.4
        ports:
        - containerPort: 80
        volumeMounts: 
        - name: html-volume
          mountPath: /usr/local/apache2/htdocs/index.html
          subPath: index.html
          readOnly: true
        - name: static-pv
          mountPath: /data/static/
        - name: dynamic-pv
          mountPath: /data/dynamic/
      volumes:
      - name: html-volume
        configMap:
          name: first-webpage
          items: 
          - key: index.html
            path: index.html
      - name: dynamic-pv
        persistentVolumeClaim:
          claimName: html-volume-claim-dynamic
      - name: static-pv
        persistentVolumeClaim:
          claimName: html-volume-claim-static
