httpd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd
spec:
  selector:
    app: httpd
  ports:
    - protocol: TCP
      port: 80 # port
      targetPort: 80 # pod port
